--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="flatpickr.min.css">
-    <link rel="stylesheet" href="notiflix.min.css">
+    <link rel="stylesheet" href="flatpickr.min.css"/>
+    <link rel="stylesheet" href="notiflix.min.css"/>
     <style>
       .timer {
           text-align: center;
