--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -30,11 +30,11 @@
 
     <div class="timer">
       <div class="field">
-        <span class="value" data-days>00</span>
+        <span class="value" days>00</span>
         <span class="label">Days</span>
       </div>
       <div class="field">
-        <span class="value" data-hours>00</span>
+        <span class="value" hours>00</span>
         <span class="label">Hours</span>
       </div>
       <div class="field">
